Correção de warnings

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/styles.css",
               "src/gemini-theme.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["moment", "rfdc"]
           },
           "configurations": {
             "production": {
