--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/gemini-theme.scss"
             ],
             "scripts": [],
-            "allowedCommonJsDependencies": ["moment", "rfdc"]
+            "allowedCommonJsDependencies": ["rfdc"]
           },
           "configurations": {
             "production": {
