--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.2.1",
     "@angular/material": "^14.2.1",
-    "@angular/material-moment-adapter": "^14.2.1",
     "@angular/platform-browser": "^14.2.1",
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
     "@swimlane/ngx-charts": "^20.5.0",
     "angular-dual-listbox": "^7.0.0",
+    "date-fns": "^2.30.0",
     "express": "^4.21.0",
     "jwt-decode": "^3.1.2",
     "ng-block-ui": "^4.0.1",
