--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "18mc-admin",
   "version": "1.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "node node_modules/@angular/cli/bin/ng.js",
     "start": "node server.js",
-    "dev": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "lint": "ng lint",
-    "test": "ng test",
-    "build-production": "ng build --configuration=production --base-href=/18mc-admin/",
-    "heroku-postbuild": "ng build --configuration=production"
+    "dev": "node node_modules/@angular/cli/bin/ng.js serve",
+    "build": "node node_modules/@angular/cli/bin/ng.js build",
+    "watch": "node node_modules/@angular/cli/bin/ng.js build --watch --configuration development",
+    "lint": "node node_modules/@angular/cli/bin/ng.js lint",
+    "test": "node node_modules/@angular/cli/bin/ng.js test",
+    "build-production": "node node_modules/@angular/cli/bin/ng.js build --configuration=production --base-href=/18mc-admin/",
+    "heroku-postbuild": "node node_modules/@angular/cli/bin/ng.js build --configuration=production"
   },
   "engines": {
     "node": "20.17.0",
@@ -18,17 +18,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.1",
-    "@angular/cdk": "^14.2.1",
-    "@angular/common": "^14.2.1",
-    "@angular/compiler": "^14.2.1",
-    "@angular/core": "^14.2.1",
-    "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "^14.2.1",
-    "@angular/material": "^14.2.1",
-    "@angular/platform-browser": "^14.2.1",
-    "@angular/platform-browser-dynamic": "^14.2.1",
-    "@angular/router": "^14.2.1",
+    "@angular/animations": "^15.2.10",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
+    "@ngbracket/ngx-layout": "^15.1.3",
     "@swimlane/ngx-charts": "^20.5.0",
     "angular-dual-listbox": "^7.0.0",
     "date-fns": "^2.30.0",
@@ -37,21 +37,21 @@
     "ng-block-ui": "^4.0.1",
     "ng2-currency-mask": "^13.0.3",
     "ngx-logger": "^5.0.7",
-    "ngx-mask": "^14.2.4",
+    "ngx-mask": "^14.3.3",
     "path": "^0.12.7",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.2",
-    "@angular-eslint/builder": "^14.4.0",
-    "@angular-eslint/eslint-plugin": "14.1.1",
-    "@angular-eslint/eslint-plugin-template": "14.1.1",
-    "@angular-eslint/schematics": "14.1.1",
-    "@angular-eslint/template-parser": "14.1.1",
-    "@angular/cli": "^14.2.2",
-    "@angular/compiler-cli": "^14.2.1",
+    "@angular-devkit/build-angular": "^15.2.11",
+    "@angular-eslint/builder": "^15.2.1",
+    "@angular-eslint/eslint-plugin": "^15.2.1",
+    "@angular-eslint/eslint-plugin-template": "^15.2.1",
+    "@angular-eslint/schematics": "^15.2.1",
+    "@angular-eslint/template-parser": "^15.2.1",
+    "@angular/cli": "^15.2.11",
+    "@angular/compiler-cli": "^15.2.10",
     "@types/d3-scale": "^4.0.8",
     "@types/d3-selection": "^3.0.11",
     "@types/d3-shape": "^3.1.6",
@@ -66,6 +66,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.8.3"
+    "typescript": "~4.9.0"
   }
 }
